Fixed soem spelling mistakes, added splash text, started on mobile styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,31 +13,6 @@ a {
     background-color: red;
 }
 
-.HomeWindowLink{
-    display: grid;
-    grid-template-rows: 20% 80%;
-    width: 150px;
-    height: 160px;
-    margin: 40px;
-    border: solid 2px black ;
-}
-
-.HomeWindowLink > div {
-    width: 100%;
-    
-}
-
-.LinkTitle{
-    background-color: #F5785F;
-    margin-top: 0px;
-    margin-bottom: 0px;;
-    text-align: center;
-    font-size: 20px;
-    color: #4D0D3B;
-    padding: 3px;
-    border-bottom: solid 2px black ; 
-}
-
 
 .BGImage {
     background-image: url('Midground.png');
@@ -95,11 +70,139 @@ a {
     margin: 10px;
 }
 
-#ReturnLink{
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    margin: 10px;
+
+@media only screen and (max-device-width: 1400px) {
+    /* For mobile Devices: */
+
+    #ReturnLink{
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        margin: 5px;
+        display: grid;
+        grid-template-rows: 20% 80%;
+        width: 125px;
+        height: 140px;
+        margin: 10px;
+        border: solid 2px black;
+    }
+
+    #ReturnLink > h5 {
+        font-size: 20px;
+    }
+
+    #LogoHolder{
+        padding-top: 70px;
+        margin-bottom: 70px;
+        object-fit: cover;
+    }
+
+    .title-bar-text{
+        font-size: 15px;
+        color: black;
+        font-weight:700;
+        text-wrap: nowrap;
+    }
+
+    .title-bar-controls > button {
+        width: 30px;
+        height:30px;
+    }
+
+    .field-row > button{
+        height: 50px;
+        width: 150px;
+        font-size: x-large;
+    }
+
+    #LogoImg{
+        min-width: 80%;
+    }
+    #HomeWindow{
+        margin: 10px;
+        min-width: 75%;
+        max-width: 80%;
+    }
+
+    .HomeWindowLink{
+        display: grid;
+        grid-template-rows: 20% 80%;
+        width: 250px;
+        height: 280px;
+        margin: 40px;
+        border: solid 2px black ;
+    }
+    
+    .HomeWindowLink > div {
+        width: 100%;
+        
+    }
+    
+    .LinkTitle{
+        background-color: #F5785F;
+        margin-top: 0px;
+        margin-bottom: 0px;;
+        text-align: center;
+        font-size: 40px;
+        color: #4D0D3B;
+        padding: 3px;
+        border-bottom: solid 2px black ; 
+    }
+  }
+
+  @media only screen and (min-device-width:1400px) {
+    /*style for desktop and tablet*/
+    #ReturnLink{
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        margin: 5px;
+        display: grid;
+        grid-template-rows: 20% 80%;
+        width: 165px;
+        height: 185px;
+        margin: 40px;
+        border: solid 2px black;
+    }
+
+    #LogoHolder{
+        margin-top: 0px;
+    }
+
+    #LogoImg{
+        width: 500px;
+    }
+
+    #HomeWindow{
+        margin: 10px;
+        min-width: 35%;
+        max-width: 35%;
+    }
+
+    .HomeWindowLink{
+        display: grid;
+        grid-template-rows: 20% 80%;
+        width: 150px;
+        height: 160px;
+        margin: 40px;
+        border: solid 2px black ;
+    }
+    
+    .HomeWindowLink > div {
+        width: 100%;
+        
+    }
+    
+    .LinkTitle{
+        background-color: #F5785F;
+        margin-top: 0px;
+        margin-bottom: 0px;;
+        text-align: center;
+        font-size: 20px;
+        color: #4D0D3B;
+        padding: 3px;
+        border-bottom: solid 2px black ; 
+    }
 }
 
 @keyframes vbPan {
